xt_platform/src/xssdtest.h

typedef struct spdk_nvme_qpair xt_qpair;
typedef struct spdk_nvme_ctrlr xt_ctrlr;
typedef struct spdk_pci_device xt_pcie;
typedef struct timespec xt_timespec;
typedef struct _xt_histogram_data xt_histogram_data;
typedef struct spdk_pci_addr xt_pci_addr;
typedef struct _cmds_u cmds_u;
typedef struct _cmds_u_ring cmds_u_ring;
typedef struct _xt_engine_ops xt_engine_ops;
typedef struct _xt_buffer xt_buffer;
typedef struct _xt_io_qpair xt_io_qpair;
typedef struct _xt_char_device_info xt_char_device_info;
typedef struct _xt_engines xt_engines;
extern void xt_admin_init(xt_admin_qpair *aqinfo, char * pcie_list,  int pcie_count);
extern unsigned long long xt_admin_get_bar_size(xt_admin_qpair *aqinfo);
extern unsigned long long xt_sys_tick_us(xt_admin_qpair *aqinfo);
extern int xt_env_init(xt_admin_qpair *aqinfo);
extern int xt_env_fini(xt_admin_qpair *aqinfo);
extern void xt_device_destory(xt_admin_qpair *aqinfo);
extern int xt_device_init(xt_admin_qpair *aqinfo);
extern int xt_device_fini(xt_admin_qpair *aqinfo);
extern int xt_nvme_device_subsystem_reset(xt_admin_qpair *aqinfo);
extern int xt_nvme_device_reset(xt_admin_qpair *aqinfo);
extern xt_io_qpair *xt_qpair_create(xt_admin_qpair *aqinfo, xt_io_qpair *qinfo, int qprio, int qdepth);
extern int xt_qpair_free(xt_admin_qpair *aqinfo, xt_io_qpair *qinfo);
extern void xt_qpair_destroy(xt_admin_qpair *aqinfo, xt_io_qpair *qinfo);
extern int xt_completed_io_check(xt_admin_qpair *aqinfo, cmds_u* io_unit);
extern cmds_u *xt_prepare_io_unit(xt_admin_qpair *aqinfo, xt_io_qpair *qinfo);
extern void xt_submit_io_cmd(xt_admin_qpair *aqinfo, xt_io_qpair *qinfo, xt_buffer *buf, cmds_u *io_unit, unsigned int length, unsigned int lbacnt);
extern int xt_wait_completion_io(xt_admin_qpair *aqinfo, xt_io_qpair *qinfo, unsigned int max_completions);
extern int xt_wait_qpair_all_submission_io_completion(xt_admin_qpair *aqinfo, xt_io_qpair *qinfo);
extern int xt_completed_admin_check(xt_admin_qpair *aqinfo, cmds_u* admin_unit);
 

extern cmds_u *xt_prepare_admin_unit(xt_admin_qpair *aqinfo);
extern void xt_submit_admin_cmd(xt_admin_qpair *aqinfo, xt_buffer *buf, cmds_u *admin_unit, unsigned int length);
extern int xt_wait_completion_admin(xt_admin_qpair *aqinfo);
extern xt_engine_ops *xt_load_engine(char* engine_ops_name, xt_admin_qpair *aqinfo);
extern unsigned int xt_get_engine_io_sync_flag(xt_admin_qpair *aqinfo);
extern unsigned int xt_get_engine_admin_sync_flag(xt_admin_qpair *aqinfo);
extern unsigned long long get_system_ticks(void);
extern unsigned char xt_pcie_device_config_read8(xt_admin_qpair *aqinfo, unsigned int offset);
extern unsigned short xt_pcie_device_config_read16(xt_admin_qpair *aqinfo, unsigned int offset);