xt_platform/src/xt_memory.h

typedef union _xt_verify_tailer
{
    unsigned int raw[4];
    struct{
        unsigned long long slba;
        unsigned int buf_index : 28;
        unsigned int sub_buf_index : 4;
        unsigned int tailer_xor;
    };
} xt_verify_tailer;
typedef struct _xt_buffer{
    void * _raw_buf;
    void * buf;
    void * physic_buf;
    void * io_tracker;      /* buffer align is 4096 */
    void * _data_integrity_extension_raw;
    void * data_integrity_extension;
    void ** io_tracker_arrys;
    void ** _io_tracker_raw_buf_arrys;
    unsigned long long seed;
    unsigned long long buf_crc512[XT_BUFFER_IO_TAILER_COUNT];
    unsigned long long buf_crc4096;
    unsigned int buf_length;
    unsigned int buf_align;
    unsigned int buf_type;      /* 1 write buffer; 2 read buffer; 3 trim buffer; 4 admin buffer; 0 and other TBD */
    unsigned int alloc_type;    /* 1 mem alloc; 2 spdk malloc; 3 CMB; 4 cuda; 5 mem share; 0 and other TBD*/
    unsigned int pi_type;       /* 0 no meta data; 1 dif; 2 dix*/
    unsigned int sector_size;   /* 512 or 4096 */
    unsigned int meta_sector_size; 
    unsigned int buf_index : 28;
    unsigned int sub_buf_index : 4;
    unsigned int buf_change;
    unsigned int buf_status;
    unsigned int io_tracker_length;
    xt_verify_tailer io_tailers[XT_BUFFER_IO_TAILER_COUNT];
    pthread_mutex_t buffer_lock;
} xt_buffer;
extern int xt_buffer_init(xt_buffer *buffer, unsigned int buf_length, unsigned int buf_align, unsigned int alloc_type, unsigned int mem_init);
extern int xt_buffer_free(xt_buffer *buffer);
extern void *xt_buffer_alloc_memory(unsigned int alloc_type, unsigned int buf_length);
extern void xt_buffer_alloc_free(unsigned int alloc_type, void * raw_buf);
extern unsigned char xt_buffer_crc8(xt_buffer *buffer, unsigned int buf_offset, unsigned int buf_length);
extern unsigned short xt_buffer_crc16(xt_buffer *buffer, unsigned int buf_offset, unsigned int buf_length);
extern unsigned int xt_buffer_crc32(xt_buffer *buffer, unsigned int buf_offset, unsigned int buf_length);
extern unsigned long long xt_buffer_crc64(xt_buffer *buffer, unsigned int buf_offset, unsigned int buf_length);
extern void xt_buffer_init_crc(xt_buffer *buffer, unsigned int crc_type);
extern void xt_set_uint8(void *buffer, unsigned int buf_offset, unsigned char value, int type);
extern unsigned char xt_get_uint8(void *buffer, unsigned int buf_offset, int type);
extern void xt_set_uint16(void *buffer, unsigned int buf_offset, unsigned short value, int type);
extern unsigned short xt_get_uint16(void *buffer, unsigned int buf_offset, int type);
extern void xt_set_uint32(void *buffer, unsigned int buf_offset, unsigned int value, int type);
extern unsigned int xt_get_uint32(void *buffer, unsigned int buf_offset, int type);
extern void xt_set_uint64(void *buffer, unsigned int buf_offset, unsigned long long value, int type);
extern unsigned long long xt_get_uint64(void *buffer, unsigned int buf_offset, int type);
extern void xt_buffer_get_init_io_tailer(xt_buffer *buffer);
extern int xt_buffer_reset_init_io_tailer(xt_buffer *buffer);
extern int xt_buffer_set_io_tracker(xt_buffer *buffer, unsigned int io_tracker_length, unsigned int io_tracker_type);
extern int xt_buffer_dif_generate(xt_buffer *buffer);
extern int xt_buffer_dif_init(xt_buffer *buffer, unsigned int meta_sector_size, unsigned int sector_size);
extern int xt_buffer_dix_generate(xt_buffer *buffer);
extern int xt_buffer_dix_init(xt_buffer *buffer, unsigned int meta_sector_size);
extern unsigned char * get_xt_buffer(xt_buffer *buffer);
extern void memory_dump(const void *addr, int length, int step, int dump_file, char * file_name);
extern void* xt_allocate_aligned_memory(unsigned int size, unsigned int alignment);
extern void xt_free_aligned_memory(void* aligned_ptr);